--- a/index.htm
+++ b/index.htm
@@ -18,8 +18,9 @@
 		<h1>Hello 阿 :D</h1>
 		<p>I'm Wenhao, and this is my page</p>
 		<!-- <p>He got a job at <a href="https://www.guokr.com"> Guokr </a> and he's being nice to himself.</p>-->
-		<p>Unemployed,Single</p>
+		<p>BEng,Unemployed,Single...</p>
 		<p>
+			<a href="https://www.linkedin.com/in/wenhao-luo-6a0a4231/">LinkedIn</a> &nbsp; | &nbsp; 
 			<a href="https://twitter.com/lwhoo">Twitter</a> &nbsp; | &nbsp; 
 			<a href="https://lwhoo.github.io/blog">Blog</a> &nbsp; | &nbsp; 
 			<a href="https://www.github.com/lwhoo">GitHub</a> &nbsp; | &nbsp; 
