--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<meta name="google-site-verification" content="bR7SthvqGbB2pIOg_dHq4LeOLKf0BiMtfgGYCzNau2k">
-	<title> Wenhao Luo </title>
+	<title> Luo's page </title>
 		<link href="./static/base.css" rel="stylesheet">
 		<link href="./static/mobile.css" rel="stylesheet" media="(max-device-width:500px)">
 		<link href="./static/print.css" rel="stylesheet" media="print">
@@ -16,7 +16,7 @@
 		<style>html, body { height: 95%; } .side-image { float: none; } .content { padding: 0px; height: 100%; display: flex; align-items: center; flex-direction: column; justify-content: center; } .body { display: flex; flex-direction: column; align-items: center; justify-content: center; } p { max-width: 500px; text-align: center; } </style>
 		<img src="./static/img/avatar_small.jpeg" height="200" style="border-radius:5px" alt="avatar image">
 		<h1>Hello 阿 :D</h1>
-		<p>I'm Wenhao, and this is my page</p>
+		<p>I'm Luo, Currently studying in Communication and signal processing</p>
 		<!-- <p>He got a job at <a href="https://www.guokr.com"> Guokr </a> and he's being nice to himself.</p>-->
 		<p>BEng,Unemployed,Single...</p>
 		<p>
