--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
 		<style>html, body { height: 95%; } .side-image { float: none; } .content { padding: 0px; height: 100%; display: flex; align-items: center; flex-direction: column; justify-content: center; } .body { display: flex; flex-direction: column; align-items: center; justify-content: center; } p { max-width: 500px; text-align: center; } </style>
 		<img src="./static/img/avatar_small.jpeg" height="200" style="border-radius:5px" alt="avatar image">
 		<h1>Hello 阿 :D</h1>
-		<p>I'm Luo, Currently studying in Communication and signal processing</p>
+		<p>I'm Luo, Currently studying in Msc Communication and signal processing</p>
 		<!-- <p>He got a job at <a href="https://www.guokr.com"> Guokr </a> and he's being nice to himself.</p>-->
 		<p>BEng,Unemployed,Single...</p>
 		<p>
