--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
 		<!-- <p>He got a job at <a href="https://www.guokr.com"> Guokr </a> and he's being nice to himself.</p>-->
 		<p>BEng,Unemployed,Single...</p>
 		<p>
-			<a href="https://lwhoo.github.io/blog">Blog</a> &nbsp; | &nbsp; 
+			<a href="http://lwhoo.github.io/blog">Blog</a> &nbsp; | &nbsp; 
 			<a href="https://www.github.com/lwhoo">GitHub</a> &nbsp; | &nbsp; 
 			
 		</p>
